monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0136/A0136.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0136;

grammar A0136 {
    symbol scope Automaton = "automaton" Name "{" (State | Transition | Tag)* "}" ;
    State = "Foo";
    Transition = "Baa";
    Tag = StartTag EndTag;
    token StartTag = "<": -> pushMode(text);
    token EndTag (text) = ">" : -> popMode;
}